0907 danbi 코드 수정

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:gravity="center">
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_marginTop="150dp"
+        android:layout_width="300dp"
         android:layout_height="50dp"
         android:id="@+id/camera_button"
         android:textAllCaps="false"
         android:text="Image To Text"
         />
 
+    <Button
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:id="@+id/storage_ImageP_button"
+        android:textAllCaps="false"
+        android:text="Storage Image Recognition"
+        />
 
 </LinearLayout>
